refactor: overall refactor
